get rid of white space under splash image the correct way

--- a/source/_patterns/01-molecules/splash/splash-image/_splash-image.scss
+++ b/source/_patterns/01-molecules/splash/splash-image/_splash-image.scss
@@ -18,7 +18,7 @@
   margin-top: -($toggle-size);
 
   img {
+    display: block;
     width: 100%;
-    margin-bottom: -10px;
   }
 }
